--- a/PYTHONWORKSPACE/튜플.ipynb
+++ b/PYTHONWORKSPACE/튜플.ipynb
@@ -2,20 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "돈까스\n",
-      "치즈까스\n",
-      "김종국 20 코딩\n",
-      "김종국 코딩 20\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# 속도가 리스트보다 빨르다.\n",
     "\n",
@@ -36,29 +25,10 @@
   }
  ],
  "metadata": {
-  "kernelspec": {
-   "display_name": "Python 3.9.6 64-bit",
-   "language": "python",
-   "name": "python3"
-  },
   "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "name": "python"
   },
-  "orig_nbformat": 4,
-  "vscode": {
-   "interpreter": {
-    "hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"
-   }
-  }
+  "orig_nbformat": 4
  },
  "nbformat": 4,
  "nbformat_minor": 2
