--- a/PYTHONWORKSPACE/함수.ipynb
+++ b/PYTHONWORKSPACE/함수.ipynb
@@ -29,18 +29,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "입금이 완료되었습니다. 잔액은 1000 원입니다.\n",
-      "수수료100원이며, 잔액은 400원 입니다.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# 전달값과 반환값\n",
     "\n",
@@ -60,19 +51,35 @@
     "def withdraw_night(balance, money): # 저녁에 출금\n",
     "    commission = 100 # 수수료 100원\n",
     "    return commission, balance - money - commission\n",
-    "\n",
-    "balance = 0\n",
-    "balance = deposit(balance, 1000)\n",
-    "# balance = withdraw(balance, 2000)\n",
-    "# balance = withdraw(balance, 500)\n",
-    "commisson , balance = withdraw_night(balance, 500)\n",
-    "print(\"수수료{0}원이며, 잔액은 {1}원 입니다.\".format(commisson, balance))\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "입금이 완료되었습니다. 잔액은 1000 원입니다.\n",
+      "수수료100원이며, 잔액은 400원 입니다.\n"
+     ]
+    }
+   ],
+   "source": [
+    "balance = 0\n",
+    "balance = deposit(balance, 1000)\n",
+    "# balance = withdraw(balance, 2000)\n",
+    "# balance = withdraw(balance, 500)\n",
+    "commisson , balance = withdraw_night(balance, 500)\n",
+    "print(\"수수료{0}원이며, 잔액은 {1}원 입니다.\".format(commisson, balance)) #balance = 잔액"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -95,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,38 +115,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "'>=' not supported between instances of 'NoneType' and 'int'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn [18], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m balance\u001b[38;5;241m=\u001b[39m withdraw(balance, \u001b[38;5;241m1000\u001b[39m)\n\u001b[1;32m      2\u001b[0m balance \u001b[38;5;241m=\u001b[39m withdraw(balance, \u001b[38;5;241m500\u001b[39m)\n",
-      "Cell \u001b[0;32mIn [16], line 2\u001b[0m, in \u001b[0;36mwithdraw\u001b[0;34m(balance, money)\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mwithdraw\u001b[39m(balance, money):\n\u001b[0;32m----> 2\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[43mbalance\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m>\u001b[39;49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m \u001b[49m\u001b[43mmoney\u001b[49m :\n\u001b[1;32m      3\u001b[0m         \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m출금이 완료되었습니다. 잔액은\u001b[39m\u001b[38;5;132;01m{0}\u001b[39;00m\u001b[38;5;124m원 입니다.\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;241m.\u001b[39mformat(balance \u001b[38;5;241m-\u001b[39m money))\n\u001b[1;32m      4\u001b[0m     \u001b[38;5;28;01melse\u001b[39;00m:\n",
-      "\u001b[0;31mTypeError\u001b[0m: '>=' not supported between instances of 'NoneType' and 'int'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "수수료는 {0}원이며, 잔액은{1}원 입니다.\n"
      ]
     }
    ],
    "source": [
-    "balance= withdraw(balance, 1000)\n",
-    "balance = withdraw(balance, 500)"
+    "def withdraw_night(balance, money):\n",
+    "    commisson = 100\n",
+    "    return commisson, balance - money - commisson"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "수수료는 {0}원이며, 잔액은{1}원 입니다.\n"
+     ]
+    }
+   ],
+   "source": [
+    "balance = 0\n",
+    "balance = deposit(balance, 1000)\n",
+    "# balance = withdraw(balance, 2000)\n",
+    "# balance = withdraw(balance, 500)\n",
+    "commisson , balance = withdraw_night(balance, 500)\n",
+    "print(\"수수료{0}원이며, 잔액은 {1}원 입니다.\".format(commisson, balance)) #balance = 잔액"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.6 64-bit",
+   "display_name": "Python 3.11.0 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -153,12 +171,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.11.0"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"
+    "hash": "53b661e86c0fb3a7847bfb80be1a663c6d16331bfe7f5b3ca6e6817531f3439a"
    }
   }
  },
